@@ -394,8 +394,6 @@
 1196 2016- 9-14 FEAT: all printings: let a plugin draw a dossier-specific
                 background
 
-1220 2016-10- 4 ofa_idate_filter_set_prefs() -> ofa_idate_filter_set_settings_key()
-
 1221 2016-10- 7 EntryPage: actions are always disabled but shouldn't)
 
 1223
@@ -1761,6 +1759,9 @@
 
 1219 2016- 9-30 BatlineTreeview: unable to modify columns visibility !?
      2016-10- 3 fixed
+
+1220 2016-10- 4 ofa_idate_filter_set_prefs() -> ofa_idate_filter_set_settings_key()
+     2016-10- 8 done
 
 1222 2016-10- 7 EntryProperties: AccountSelect: non-detail accounts are
                 not grayed (but should)
